fixed navbar cutoff

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -11,7 +11,7 @@ a {
   background-color: #f73b3b;
 }
 .container-nav .nav-hamburger-clicked {
-  height: 100px;
+  height: 120px;
   width: 100%;
   display: flex;
   flex-direction: column;
