--- a/LESS/navbar.less
+++ b/LESS/navbar.less
@@ -4,9 +4,10 @@ a{
     padding: 7px;
 }
 .container-nav{
+    
     .nav-hamburger-clicked{
      
-        height: 100px;        
+        height: 120px;        
         width: 100%;
         display: flex;
         flex-direction: column;
